--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,12 +39,11 @@ jobs:
           python-version: 3.12
       - name: Run backend tests
         run: |
-            cd backend
-            python -m venv venv
-            source venv/bin/activate
-            pip install -r requirements/dev.txt
-            pip install pytest 
-            python -m pytest
+          cd backend
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements/dev.txt
+          python manage.py test
 
       # 3. Tests unitaires du frontend
       - name: Setup Node.js and run frontend tests
