--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,10 +59,10 @@ jobs:
       # 4. Build des images Docker
       - name: Build backend Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner | toLower }}/projetcicd-backend:latest -f ./backend/Dockerfile ./backend
+          docker build -t ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-backend:latest -f ./backend/Dockerfile ./backend
       - name: Build frontend Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner | toLower }}/projetcicd-frontend:latest -f ./frontend/Dockerfile ./frontend
+          docker build -t ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-frontend:latest -f ./frontend/Dockerfile ./frontend
 
       # 5. Connexion à GHCR
       - name: Log in to GHCR
@@ -77,11 +77,11 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ github.repository_owner | toLower }}/projetcicd-backend:latest
+          tags: ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-backend:latest
 
 
       - name: Push frontend image to GHCR
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ github.repository_owner | toLower }}/projetcicd-frontend:latest
+          tags: ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-frontend:latest
