--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,14 @@ jobs:
           --health-retries 5
 
     steps:
-      # 1. Checkout du code source
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Tests unitaires du backend
+      # Définir la variable OWNER en minuscules
+      - name: Set lower-case owner
+        run: echo "OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      # 2. Exécuter les tests unitaires du backend via manage.py
       - name: Setup Python and run backend tests
         uses: actions/setup-python@v4
         with:
@@ -45,7 +48,7 @@ jobs:
           pip install -r requirements/dev.txt
           python manage.py test
 
-      # 3. Tests unitaires du frontend
+      # 3. Exécuter les tests unitaires du frontend
       - name: Setup Node.js and run frontend tests
         uses: actions/setup-node@v3
         with:
@@ -56,15 +59,15 @@ jobs:
           npm install
           npm run test:unit
 
-      # 4. Build des images Docker
+      # 4. Construire les images Docker (backend et frontend)
       - name: Build backend Docker image
         run: |
-          docker build -t ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-backend:latest -f ./backend/Dockerfile ./backend
+          docker build -t ghcr.io/${{ env.OWNER }}/projetcicd-backend:latest -f ./backend/Dockerfile ./backend
       - name: Build frontend Docker image
         run: |
-          docker build -t ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-frontend:latest -f ./frontend/Dockerfile ./frontend
+          docker build -t ghcr.io/${{ env.OWNER }}/projetcicd-frontend:latest -f ./frontend/Dockerfile ./frontend
 
-      # 5. Connexion à GHCR
+      # 5. Se connecter à GitHub Container Registry (GHCR)
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -76,12 +79,14 @@ jobs:
       - name: Push backend image to GHCR
         uses: docker/build-push-action@v2
         with:
+          context: backend
+          file: backend/Dockerfile
           push: true
-          tags: ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-backend:latest
-
-
+          tags: ghcr.io/${{ env.OWNER }}/projetcicd-backend:latest
       - name: Push frontend image to GHCR
         uses: docker/build-push-action@v2
         with:
+          context: frontend
+          file: frontend/Dockerfile
           push: true
-          tags: ghcr.io/${{ toLower(github.repository_owner) }}/projetcicd-frontend:latest
+          tags: ghcr.io/${{ env.OWNER }}/projetcicd-frontend:latest
